[gd_scene load_steps=6 format=3 uid="uid://c7d7tvxjrw4dy"]

[ext_resource type="Script" path="res://map/map.gd" id="1_hce3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70tts"]
size = Vector2(1151.5, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dp3n8"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h15r1"]
size = Vector2(20, 648)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijnkh"]
size = Vector2(20, 648)

[node name="Map" type="Node2D"]
script = ExtResource("1_hce3y")

[node name="Top" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(575.75, -7.5)
shape = SubResource("RectangleShape2D_70tts")

[node name="Bottom" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(576, 658)
shape = SubResource("RectangleShape2D_dp3n8")

[node name="Left" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2(-10, 324)
shape = SubResource("RectangleShape2D_h15r1")

[node name="Right" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2(1162, 324)
shape = SubResource("RectangleShape2D_ijnkh")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_right_body_entered"]
